Update Spring Boot version and clean up code
Upgraded Spring Boot to version 3.5.7 in pom.xml. Refactored logging in LoadDatabase, simplified stream collection in OrderController, and removed unused imports from OrderRepository and OrderService. Updated application.properties to clear datasource password and disable open-in-view. Added a comment to the empty test method in OrderRestApiApplicationTests.